<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/signin"
      android:text="@string/sign_in"
      android:textColor="@color/white"
      android:textSize="35sp"
      android:textStyle="bold"
      android:layout_margin="50dp"
      android:gravity="center"
      />

  <EditText
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/username"
      android:layout_below="@id/signin"
      android:background="#30ffffff"
      android:hint="@string/user"
      android:textColorHint="@color/white"
      android:textColor="@color/white"
      android:layout_margin="18dp"
      android:padding="20dp"
      android:drawableStart="@drawable/baseline_person_24"
      android:drawablePadding="20dp"
      android:autofillHints=""
      android:inputType="text" />

  <EditText
      android:id="@+id/password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@id/username"
      android:layout_marginStart="18dp"
      android:layout_marginTop="18dp"
      android:layout_marginEnd="18dp"
      android:layout_marginBottom="18dp"
      android:background="#30ffffff"
      android:drawableStart="@drawable/baseline_lock_24"
      android:drawablePadding="20dp"
      android:hint="@string/pass"
      android:padding="20dp"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:autofillHints=""
      android:inputType="textPassword" />

  <com.google.android.material.button.MaterialButton
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/loginbtn"
      android:layout_below="@id/password"
      android:text="@string/login"
      android:textSize="25sp"
      android:backgroundTint="@color/design_default_color_secondary"
      android:layout_centerHorizontal="true"
      android:layout_margin="20dp"
    />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:id="@+id/forgotpass"
    android:layout_below="@id/loginbtn"
    android:text="@string/forgot_password"
    android:textColor="@color/white"
    android:layout_centerHorizontal="true"
    android:layout_margin="28dp" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
    android:id="@+id/others"
      android:layout_above="@id/socialicons"
    android:text="@string/or_sign_in_with"
    android:layout_centerHorizontal="true"

    />
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/socialicons"
   android:layout_alignParentBottom="true"
   android:gravity="center">
   <ImageView
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_margin="28dp"
       android:src="@drawable/google"
       android:contentDescription="@string/google" />

   <ImageView
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_margin="28dp"
       android:src="@drawable/fb"
       android:contentDescription="@string/facebook" />

   <ImageView
       android:layout_width="48dp"
       android:layout_height="48dp"
       android:layout_margin="28dp"
       android:src="@drawable/twitter"
       android:contentDescription="@string/twitter" />
 </LinearLayout>





</RelativeLayout>